...
        </UnderHeaderBlock>
        <ScrollView
          style={{
            paddingLeft: 16,
            paddingRight: 16,
          }}
          testID="ShowPaperKeyScrollView"
          showsVerticalScrollIndicator={true}
        >
          <Words>
            {mnemonicArr.map((word: string, i: number) => {
              return (
                <Word key={i}>
...
                </Word>
              )
            })}
          </Words>
          {!fromSettings && (
            <Button
              testID="ShowPaperKeyContinueButton"
              title="Continue"
              disabled={false}
              onPress={() => {
                navigation.navigate('VerifyPaperKey', { title: 'Verify Paper key ' })
              }}
            />
...
