...
        })
      }
    }
  }

  return (
    <View testID="LandingScreen" style={styles.wrapper}>
      <View style={{ flex: 3 }} />
      <View style={styles.title}>
        <Image
          source={require('src/assets/images/landing.png')}
          style={styles.image}
        />
...
        <Text style={styles.appSlogan}>Grin wallet you've deserved</Text>
      </View>
      <View style={{ flex: 2 }} />
      <Button
        style={styles.actionButton}
        title="Create a new wallet"
        testID="NewWalletButton"
        disabled={false}
        onPress={onNewWallet(true)}
      />
      <Button
        style={styles.actionButton}
        title="I already have a wallet"
...
