...
            <Text>.</Text>
          </RightText>
        }
      />
      <Spacer />
      <Button
        testID="IAgree"
        title={'Next'}
        disabled={!checked}
        onPress={() => {
          navigation.navigate(nextScreen.name, nextScreen.params)
        }}
      />
...
